@@ -20,12 +20,14 @@
 	<ul>
 	<li> <a href="gui.html#Overview">Overview</a></li>
 	<li> <a href="gui.html#Create">Network creation</a></li>
-	<li> <a href="gui.html#NodeCreate">Create a node</a></li>
-	<li> <a href="gui.html#LinkCreate">Create a link</a></li>
+	<li> <a href="gui.html#NodeCreate">Creating a node</a></li>
+	<li> <a href="gui.html#LinkCreate">Creating a link</a></li>
 	<li> <a href="gui.html#Interaction">Interaction and shapes</a></li>
 	<li> <a href="gui.html#Random">Random network creation</a></li>
-	<li> <a href="gui.html#Load">Load a network</a></li>
-	<li> <a href="gui.html#Save">Save a network</a></li>
+	<li> <a href="gui.html#Load">Loading a network</a></li>
+	<li> <a href="gui.html#Save">Saving a network</a></li>
+	<li> <a href="gui.html#Export">Printing and Exporting</a></li>
+
 	</ul>
 </li>
 
